data/src/snapshots/data__owned_dataset__tests__siso_dataset.snap
---
source: data/src/owned_dataset.rs
expression: lala
---
[
    Batch {
        number_of_samples: 3,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 3,
        data: [
            1.0,
            2.0,
            3.0,
            10.0,
            20.0,
            30.0,
        ],
        _state: PhantomData<network::data_structures::batch::Training>,
    },
    Batch {
        number_of_samples: 3,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 3,
        data: [
            4.0,
            5.0,
            6.0,
            40.0,
            50.0,
            60.0,
        ],
        _state: PhantomData<network::data_structures::batch::Training>,
    },
    Batch {
        number_of_samples: 3,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 3,
        data: [
            7.0,
            8.0,
            9.0,
            70.0,
            80.0,
            90.0,
        ],
        _state: PhantomData<network::data_structures::batch::Training>,
    },
    Batch {
        number_of_samples: 1,
        input_nodes: 1,
        output_nodes: 1,
        split_index: 1,
        data: [
            10.0,
            100.0,
        ],
        _state: PhantomData<network::data_structures::batch::Training>,
    },
]
